maze.pledge.PledgeMaze.scala.code
override def run() {
  etat(0)
  var sommeAngle:Int = 0
  
  def etat(e:Int) {
    e match {
      case 0 => nord()
      case 1 => suivreMur()
    }
  }
  
  def suivreMur() {
    while(!estSurBiscuit())
      conditionSuivreMur(true)
    prendBiscuit()
  }
  
  def nord() {
    setDirection(Direction.NORTH)
    while(getY() != 0) {
      if(getDirection == Direction.NORTH && !estFaceMur())
      	avance()
      else {
        if(getDirection == Direction.EAST)
          conditionSuivreMur(false)
        else conditionSuivreMur(true)
      }
    }
    etat(1)
  }
  
  def conditionSuivreMur(droiteTrue:Boolean) {
    if(droiteTrue)
    	droiteCompte()
    else gaucheCompte()
    
    if(estFaceMur()) {
      if(droiteTrue)
        gaucheCompte()
    	else droiteCompte()
      
      if(!estFaceMur())
      	avance()
      else {
        if(droiteTrue)
        	gaucheCompte()
    		else droiteCompte()
      }
    } else avance()
  }
  
  def isDirectionFree(dir:Direction):Boolean = {
    if((dir == gauche() && sommeAngle == 4) || (dir == droite() && sommeAngle == -4)) {
      sommeAngle = 0
    	return False
    } return True
  }
  
  def gaucheCompte() {
    gauche()
    sommeAngle +=1
  }
  
  def droiteCompte() {
    droite()
    sommeAngle -= 1
  }
}